hphp/hack/test/typecheck/as_expression/any.php.exp
File "any.php", line 7, characters 13-14:
Was expecting a type hint (Typing[4032])
File "any.php", line 11, characters 13-14:
Was expecting a type hint (Typing[4032])
File "any.php", line 15, characters 13-14:
Was expecting a type hint (Typing[4032])
File "any.php", line 19, characters 12-13:
Was expecting a type hint (Typing[4032])
